# sfml-dom

./: CMakeLists.txt  LICENSE.md  README.md  flake.nix
src/: CicleState.cpp  CicleState.hpp  Game.hpp  Gamestate.hpp  RecState.cpp  RecState.hpp  hello.cpp  main.cpp
